--- a/src/app/tabs/tabs.component.css
+++ b/src/app/tabs/tabs.component.css
@@ -6,3 +6,10 @@
   color: grey;
   font-weight: bold;
 }
+
+.scroll {
+  top: auto;
+  bottom: 0; 
+  height: calc(100vh - 50px);
+  overflow-y: auto;
+  }
