--- a/src/app/archive/archive.component.css
+++ b/src/app/archive/archive.component.css
@@ -57,7 +57,9 @@
     width: 22px;
     height: 22px;
     float: right;
-    margin-left: -22px;
+    margin-left: -11px;
+    margin-top: -11px;
+
   }
   
   th[sortable].desc:before {
