--- a/src/app/init/init.component.html
+++ b/src/app/init/init.component.html
@@ -3,7 +3,7 @@
 
         <div id="connection-status" class="">
         <span>
-            Uspostavljanje konekcije na server baze 
+            Konektovanje na bazu 
          </span> &nbsp;
              <div class="spinner-border mid" style="color: #3478F7"></div>
              {{statusMsg}}
